--- a/roles/iptables/templates/iptables.conf.j2
+++ b/roles/iptables/templates/iptables.conf.j2
@@ -31,6 +31,8 @@
 -A OUTPUT -p icmp --icmp-type echo-reply -j ACCEPT
 # SSH
 -A OUTPUT -p tcp -m tcp --dport {{ ansible_ssh_port }} -j ACCEPT
+# LDAP 
+-A OUTPUT -p tcp -m tcp --dport 389 -j ACCEPT
 # WEB 
 -A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
 -A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
