--- a/roles/iptables/templates/jail.Ubuntu16.j2
+++ b/roles/iptables/templates/jail.Ubuntu16.j2
@@ -308,11 +308,18 @@ logpath = %(apache_error_log)s
 maxretry = 1
 
 [nginx-http-auth]
+{% if nginx_enabled is defined %}
+enabled	= true
+{% else %}
 
+{% endif %}
 port    = http,https
 logpath = %(nginx_error_log)s
 
 [nginx-botsearch]
+{% if nginx_enabled is defined %}
+enabled	= true
+{% endif %}
 port     = http,https
 logpath  = %(nginx_error_log)s
 maxretry = 2
@@ -495,11 +502,17 @@ logpath  = %(syslog_mail)s
 
 [postfix]
 
+{% if inventory_hostname in groups.bluemind_server %}
+enabled = true
+{% endif %}
 port     = smtp,465,submission
 logpath  = /var/log/mail.log
 
 
 [postfix-rbl]
+{% if inventory_hostname in groups.bluemind_server %}
+enabled = true
+{% endif %}
 
 port     = smtp,465,submission
 logpath  = %(syslog_mail)s
@@ -508,12 +521,18 @@ maxretry = 1
 
 [sendmail-auth]
 
+{% if inventory_hostname in groups.bluemind_server %}
+enabled = true
+{% endif %}
 port    = submission,465,smtp
 logpath = %(syslog_mail)s
 
 
 [sendmail-reject]
 
+{% if inventory_hostname in groups.bluemind_server %}
+enabled = true
+{% endif %}
 port     = smtp,465,submission
 logpath  = %(syslog_mail)s
 
@@ -535,6 +554,9 @@ logpath = %(dovecot_log)s
 
 [sieve]
 
+{% if inventory_hostname in groups.bluemind_server %}
+enabled = true
+{% endif %}
 port   = smtp,465,submission
 logpath = %(dovecot_log)s
 
@@ -576,6 +598,9 @@ logpath  = %(syslog_mail)s
 
 [postfix-sasl]
 
+{% if inventory_hostname in groups.bluemind_server %}
+enabled = true
+{% endif %}
 port     = smtp,465,submission,imap3,imaps,pop3,pop3s
 # You might consider monitoring /var/log/mail.warn instead if you are
 # running postfix since it would provide the same log lines at the
@@ -597,6 +622,9 @@ logpath = /var/lib/squirrelmail/prefs/squirrelmail_access_log
 
 [cyrus-imap]
 
+{% if inventory_hostname in groups.bluemind_server %}
+enabled = true
+{% endif %}
 port   = imap3,imaps
 logpath = %(syslog_mail)s
 
